--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,4 +1,9 @@
 ---
+User1.png: User1-3d92995f4d7fb39f721e471f2afc4ab3.png
+User2.png: User2-b43001b25b56dc521697ef4f4be6ba29.png
+User3.png: User3-86939e4f8519bc504a2a9e94dd9bc714.png
+glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
+glyphicons-halflings.png: glyphicons-halflings-ab3144065a860d198f1d7d9a4882640c.png
 no_profile.png: no_profile-8c87b3dbf0e9c23c28174ea6c63f037a.png
 application.js: application-5403d641501682a088a1bbf343ca897b.js
 application.css: application-9b102f3d65ffd824f6d66380b37af1d3.css
